--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">I'm shanthu, machine design manufacturing and automation engineer by profession, programmer by passion. Curretly working as a Research and Development Engineer.  <br>Passion dont need motivation. </p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">I'm shanthu,a machine design manufacturing and automation engineer by profession, programmer by passion. Curretly working as a Research and Development Engineer.  <br>Passion dosen't need motivation. </p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">To achieve a challenging career in the field of information technology and strive for excellence learning in a progressive environment, enhancing my skills and contributing my part to the overall growth of an organization to scale newer heights.  </p></div>
                 </div>
                 <!-- About Section Button-->
@@ -140,7 +140,7 @@
                         <form id="contactForm" name="sentMessage" novalidate="novalidate">
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Name</label>
+                                    
                                     
                                     <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
                                     <p class="help-block text-danger"></p>
@@ -264,7 +264,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">E-Commerce website</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Tasty Cake</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -274,7 +274,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="portfolio_websitepics\1.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">A responsivee-commerce  website for a  well-known  Sri  Lankan company. ‘Mother  &Baby  care’ is a store  located  in  Jaffna, 
+                                    <p class="mb-5">A responsive E-commerce  website for a  well-known  Sri  Lankan company. ‘Mother  &Baby  care’ is a store  located  in  Jaffna, 
                                         Sri  Lanka  which  sells essential maternity and baby care products. An e-commerce website was successfully launched for the convenience of the customers.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
